# socialcommercenews

./: .replit  README.md  fetch_thumbnails.py  fix_images.py  main.py  models.py  pyproject.toml  topics.py  update_all_images.py  update_images.py
attached_assets/: Pasted-A-thumbnail-free-card-design-that-still-feels-rich-and-easy-to-scan-1-Publisher-color-strip-Who-w-1746574868381.txt
instance/: social_commerce_news.db
static/js/: dashboard.js
templates/: article_detail.html  articles.html  base.html  index.html  keywords.html  topics.html  trends.html
