[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "cachetools>=5.5.2",
    "email-validator>=2.2.0",
    "feedparser>=6.0.11",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gspread>=6.2.0",
    "gunicorn>=23.0.0",
    "oauth2client>=4.1.3",
    "openai>=1.77.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pytrends>=4.9.2",
    "requests>=2.32.3",
    "sendgrid>=6.12.0",
    "sqlalchemy>=2.0.40",
    "trafilatura>=2.0.0",
]
